<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mrfiring.ru.bjd_tests.MainActivity">

    <TextView
        android:text="@string/select_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/edNumber"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.AutoCompleteTextView"
        android:text="20"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_width="80dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/edNumber"
        android:layout_centerHorizontal="true"
        android:id="@+id/editText3"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondaryNoDisable"
        android:text="@string/max"
        android:textAlignment="center" />

    <Button
        android:text="@string/btnStart"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:layout_below="@+id/editText3"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:elevation="0dp"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:layout_marginTop="63dp" />

</RelativeLayout>
