<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mrfiring.ru.bjd_tests.ResultActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/alert_light_frame" android:id="@+id/linearLayout">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRight"
            android:paddingLeft="4dp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvInvalid"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="4dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:text="@string/to_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnToGeneral"
        android:textStyle="normal|bold"
        android:background="@color/colorPrimary"
        android:textColor="@color/background_white" />

    <TextView
        android:text="@string/balls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textAllCaps="true" />

    <TextView
        android:text="5"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/tvResult"
        android:background="@android:drawable/alert_light_frame"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:text="@string/scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResult"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView6"
        android:textSize="14sp" />
</RelativeLayout>
