<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tests_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mrfiring.ru.bjd_tests.Tests_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuestion"
                tools:text="@string/question"
                android:background="@android:drawable/dark_header"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:elevation="0dp"
                android:paddingLeft="15dp" />

            <TextView
                android:text="@string/answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold"
                android:textAllCaps="true" />

            <Button
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAns1"
                android:background="@android:drawable/dialog_holo_light_frame"
                style="@android:style/Widget.Button"
                android:layout_below="@+id/tvQuestion"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="visible"
                android:textSize="14sp" />

            <Button
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnAns1"
                android:layout_alignLeft="@+id/btnAns1"
                android:layout_alignStart="@+id/btnAns1"
                android:id="@+id/btnAns2"
                android:background="@android:drawable/dialog_holo_light_frame"
                style="@android:style/Widget.Button"
                android:textSize="14sp" />

            <Button
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAns3"
                android:background="@android:drawable/dialog_holo_light_frame"
                style="@android:style/Widget.Button"
                android:layout_below="@+id/btnAns2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp" />

            <Button
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAns4"
                android:background="@android:drawable/dialog_holo_light_frame"
                style="@android:style/Widget.Button"
                android:layout_below="@+id/btnAns3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp" />

            <Button
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAns5"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@android:color/black"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:text="@string/btnAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAnswer"
            android:background="@color/colorPrimary"
            android:layout_above="@+id/btnNext"
            android:layout_centerHorizontal="true"
            android:textColor="@color/background_white"
            android:elevation="0dp"
            android:shadowColor="@color/background_white" />

    </LinearLayout>

</RelativeLayout>
